fix: increase gap between badges

--- a/chat_4k_uhd.css
+++ b/chat_4k_uhd.css
@@ -32,7 +32,7 @@ textarea {
     padding: 20px 32.5px;
 }
 .live_chatting_username_container__m1-i5.live_chatting_username_is_overlay__A8Xmr .live_chatting_username_wrapper__iJpJB {
-    gap: 15px;
+    gap: 45px;
     line-height: inherit;
     margin-right: 45px;
 }
